--- a/lxgwwenkai.css
+++ b/lxgwwenkai.css
@@ -1,30 +1,30 @@
 @font-face {
 	font-family: 'LXGWWenKai';
-	src: url('LXGWWenKai-Regular.ttf');
+	src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai-Regular.ttf');
 	font-weight: regular;
 }
 @font-face {
 	font-family: 'LXGWWenKai';
-	src: url('LXGWWenKai-Light.ttf');
+	src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai-Light.ttf');
 	font-weight: light;
 }
 @font-face {
 	font-family: 'LXGWWenKai';
-	src: url('LXGWWenKai-Bold.ttf');
+	src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai-Bold.ttf');
 	font-weight: bold;
 }
 @font-face {
 	font-family: 'LXGWWenKai Mono';
-	src: url('LXGWWenKaiMono-Regular.ttf');
+	src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKaiMono-Regular.ttf');
 	font-weight: regular;
 }
 @font-face {
 	font-family: 'LXGWWenKai Mono';
-	src: url('LXGWWenKaiMono-Light.ttf');
+	src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKaiMono-Light.ttf');
 	font-weight: light;
 }
 @font-face {
 	font-family: 'LXGWWenKai Mono';
-	src: url('LXGWWenKaiMono-Bold.ttf');
+	src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKaiMono-Bold.ttf');
 	font-weight: bold;
 }
