--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'LXGWWenKai';
-    src: url('LXGWWenKai-Bold.woff2') format('woff2'),
-        url('LXGWWenKai-Bold.woff') format('woff'),
-        url('LXGWWenKai-Bold.ttf') format('truetype');
+    src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai-Bold.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai-Bold.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai-Bold.ttf') format('truetype');
     font-weight: regular;
     font-style: normal;
     font-display: swap;
