--- a/Font/LXGWWenKai.css
+++ b/Font/LXGWWenKai.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'LXGWWenKai';
-    src: url('LXGWWenKai.woff2') format('woff2'),
-        url('LXGWWenKai.woff') format('woff'),
-        url('LXGWWenKai.ttf') format('truetype');
+    src: url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/aaaaahelloworld/LXGWWenKai-Web/LXGWWenKai.ttf') format('truetype');
     font-weight: regular;
     font-style: normal;
     font-display: swap;
